modified in net beans

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ opacity: 0.95;
     
 	<div id="theheader" data-role="header">
     <a href="#mypanel">About</a>
-		<h1>Mars Missions  </h1>
+		<h1>Mars Missions v3 </h1>
 <div data-role="navbar">
 	<ul>
 		<li><a href="#index" data-transition="fade"> home</a></li>
